tests/type_sig_merge/async_void_return-import.js
// @flow

import {f} from './async_void_return-export';

(f(): empty); // error: Promise ~> empty
